[package]
name = "datalake"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "sync", "time", "io-std", "rt-multi-thread", "macros"] }
thiserror = "1.0.63"
requestty = "0.5.0"
hex = "0.4.3"
aws-config = "1.5.4"
aws-sdk-s3 = "1.42.0"
serde-binary =  "0.5.0"
serde = { version = "1.0", features = ["derive"] }
rocksdb_lib = { package = "rocksdb", version = "0.22", default-features = false }

[[bin]]
name = "datalake"
path = "src/bin/main.rs"